Add pushbullet IP blacklist

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -40,6 +40,9 @@ http.timeout.read = 90
 http.timeout.write = 60
 
 
+pushbullet.ip_blacklist = 110.175.102.25, 127.0.0.1
+
+
 # For any cookies set by Revel (Session,Flash,Error) these properties will set
 # the fields of:
 # http://golang.org/pkg/net/http/#Cookie
